--- a/_posts/2020-08-16_avatar-appa/2020-08-16_avatar-appa.Rmd
+++ b/_posts/2020-08-16_avatar-appa/2020-08-16_avatar-appa.Rmd
@@ -11,6 +11,7 @@ categories:
   - Tidytuesday
   - Machine learning
   - Supervised
+  - NLP
 preview: avatar-heatmap.png
 output:
   distill::distill_article:
